--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
+        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
             background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
             background-size: 300% 300%;
@@ -46,8 +47,16 @@
             position: relative;
             z-index: 10;
             backdrop-filter: blur(15px);
-            border: 4px solid white;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.1);
+            /* This creates the Rainbow Border effect */
+            border: 5px solid transparent;
+            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #ffc8dd, #b9fbc0, #fcf6bd) 1;
+            border-radius: 30px; /* Note: border-image can sometimes break border-radius in some browsers, using box-shadow as fallback */
+            box-shadow: 0 0 20px rgba(255, 175, 204, 0.5), 0 20px 50px rgba(0,0,0,0.1);
+            background-clip: padding-box;
+            border: 4px solid white; /* Keeping the clean white edge but adding a rainbow glow below */
+            box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.6), 
+                        0 0 20px 2px #ffafcc, 
+                        0 0 25px 5px #bde0fe;
         }
 
         @keyframes moveGradient {
@@ -72,11 +81,15 @@
 
         button {
             width: 100%; padding: 14px; border: 2px solid #ffccd5;
-            background: rgba(255, 255, 255, 0.8); border-radius: 20px;
+            background: rgba(255, 255, 255, 0.9); border-radius: 20px;
             cursor: pointer; transition: 0.3s; color: var(--text-color);
             font-family: 'Quicksand', sans-serif; font-weight: 700;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
         }
-        button:hover { background: var(--pink); color: white; border-color: white; transform: scale(1.03); }
+        button:hover { 
+            background: linear-gradient(45deg, #ffafcc, #bde0fe); 
+            color: white; border-color: white; transform: scale(1.03); 
+        }
 
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
@@ -96,7 +109,7 @@
         @keyframes wobble { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(5deg); } 75% { transform: rotate(-5deg); } }
 
         .letter-view, .password-view, .music-view { display: none; text-align: left; }
-        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; margin-bottom: 20px; min-height: 150px;}
+        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; margin-bottom: 20px; min-height: 150px; border: 1px solid #eee; }
 
         .music-text {
             font-family: 'Montserrat', sans-serif;
@@ -233,7 +246,6 @@
     }
     animate();
 
-    // Letter Typing Effect
     const letterText = "My Dearest Archana,\n\nThank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. \n\nAlways yours, \nBibin ❤️";
     function typeLetter() {
         const target = document.getElementById('typed-letter');
