--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             background-size: 400% 400%;
             animation: rainbowBG 15s ease infinite;
             display: flex; justify-content: center; align-items: center;
+            touch-action: manipulation;
         }
 
         @keyframes rainbowBG {
@@ -32,11 +33,10 @@
             100% { background-position: 0% 50%; }
         }
 
-        #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
+        #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; pointer-events: none; }
 
-        /* --- UPDATED RAINBOW QUIZ BOX --- */
         .container {
-            background: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.85);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             padding: 2.5rem 2rem;
@@ -46,11 +46,19 @@
             text-align: center;
             position: relative;
             z-index: 10;
-            border: 4px solid white;
-            box-shadow: 0 0 20px 2px rgba(255, 175, 204, 0.5), 0 20px 50px rgba(0,0,0,0.1);
+            /* Animated Rainbow Border */
+            border: 5px solid transparent;
+            border-image: linear-gradient(45deg, #ffafcc, #bde0fe, #b9fbc0, #ffc8dd) 1;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.1), 0 0 20px rgba(255, 175, 204, 0.5);
+            animation: borderGlow 5s linear infinite;
         }
 
-        h1 { font-family: 'Great Vibes', cursive; color: var(--text-color); margin: 0 0 15px 0; font-size: 2.5rem; text-shadow: 0 2px 10px rgba(255,255,255,0.8); }
+        @keyframes borderGlow {
+            0%, 100% { filter: hue-rotate(0deg); }
+            50% { filter: hue-rotate(180deg); }
+        }
+
+        h1 { font-family: 'Great Vibes', cursive; color: var(--text-color); margin: 0 0 15px 0; font-size: 2.5rem; }
         h2 { font-family: 'Dancing Script', cursive; color: #ff4d6d; font-size: 2rem; margin-bottom: 10px; }
         p { font-weight: 700; color: var(--text-color); font-size: 1.1rem; margin-bottom: 20px; }
 
@@ -73,68 +81,47 @@
             position: relative; overflow: hidden;
         }
 
-        button::after {
-            content: ''; position: absolute; top: -50%; left: -60%; width: 20%; height: 200%;
-            background: rgba(255, 255, 255, 0.7); transform: rotate(30deg); transition: 0.6s;
-        }
-
         button:hover { 
             background: linear-gradient(45deg, #ffafcc, #bde0fe); 
             color: white; border-color: white; transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(255, 175, 204, 0.4);
         }
-        button:hover::after { left: 120%; }
 
-        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
-        @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
-
-        .valentine-title { 
-            font-family: 'Dancing Script', cursive; 
-            font-size: 3rem; color: #ff4d6d;
-            animation: floatText 3s ease-in-out infinite; 
+        /* Polaroid Style for Letter */
+        .polaroid {
+            background: white;
+            padding: 10px 10px 30px 10px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+            transform: rotate(-2deg);
+            margin-bottom: 15px;
         }
-        @keyframes floatText { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-        
+
+        .letter-paper { 
+            background: #fff; padding: 10px; border-radius: 5px; 
+            font-family: 'Dancing Script', cursive; font-size: 1.3rem; 
+            color: #444; line-height: 1.4;
+        }
+
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
-        .gift-item { 
-            font-size: 60px; cursor: pointer; transition: 0.4s; 
-            filter: drop-shadow(0 0 5px rgba(255,255,255,0.8));
-            animation: pulseGift 2s infinite ease-in-out;
-        }
-        @keyframes pulseGift {
-            0%, 100% { transform: scale(1); filter: drop-shadow(0 0 5px white); }
-            50% { transform: scale(1.1); filter: drop-shadow(0 0 15px var(--pink)); }
-        }
-
-        .letter-view, .password-view, .music-view { display: none; text-align: left; transition: 0.5s opacity; }
-        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; border: 1px solid #eee; box-shadow: inset 0 0 10px rgba(0,0,0,0.02); }
-
-        .music-text {
-            font-family: 'Montserrat', sans-serif; font-size: 1.2rem;
-            color: #8338ec; text-align: center; font-weight: 600;
-            background: linear-gradient(45deg, #ff4d6d, #8338ec);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-        }
+        .gift-item { font-size: 60px; cursor: pointer; transition: 0.4s; }
+        .gift-item:hover { transform: scale(1.2); }
 
         .back-icon { 
-            font-size: 0.8rem; cursor: pointer; display: inline-block; 
-            margin-top: 15px; background: #ffc8dd; padding: 8px 20px; 
-            border-radius: 20px; color: white; font-weight: bold; transition: 0.3s;
+            cursor: pointer; display: inline-block; margin-top: 15px; 
+            background: #ffc8dd; padding: 8px 20px; border-radius: 20px; 
+            color: white; font-weight: bold;
         }
-        .back-icon:hover { background: #ffafcc; transform: translateY(-2px); }
 
-        .reveal-pass { 
-            opacity: 0; animation: slowShow 2s forwards; cursor: pointer;
-            background: white; padding: 15px; border-radius: 15px; border: 2px dashed #ffafcc;
-        }
-        @keyframes slowShow { to { opacity: 1; } }
-
-        .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
         #copy-toast {
             position: fixed; bottom: 20%; left: 50%; transform: translateX(-50%);
             background: var(--text-color); color: white; padding: 10px 20px;
-            border-radius: 20px; font-size: 0.8rem; opacity: 0; transition: 0.3s; z-index: 1000;
+            border-radius: 20px; opacity: 0; transition: 0.3s; z-index: 1000;
         }
+
+        .heart-particle {
+            position: fixed; pointer-events: none; z-index: 9999; font-size: 20px;
+        }
+
+        #no-btn { transition: 0.2s ease-out; }
     </style>
 </head>
 <body>
@@ -166,7 +153,15 @@
     <div id="q8" class="page"><h2>Question 8</h2><p>What is my favorite thing about you?</p><div class="options-grid"><button onclick="next(this, false)">Your Eyes</button><button onclick="next(this, false)">Your Smile</button><button onclick="next(this, true)">Everything!</button><button onclick="next(this, false)">Effortless Movement</button></div></div>
     <div id="q9" class="page"><h2>Question 9</h2><p>Which is my fav thing you says?</p><div class="options-grid"><button onclick="next(this, false)">Bibinee</button><button onclick="next(this, true)">Entha Bibinneee</button><button onclick="next(this, false)">Babbyyy</button><button onclick="next(this, false)">Poddaaa</button></div></div>
     <div id="q10" class="page"><h2>Question 10</h2><p>Do you love me?</p><div class="options-grid"><button onclick="next(this, true)">YESSS!</button><button onclick="next(this, false)">No</button><button onclick="next(this, false)">Maybe</button><button onclick="next(this, false)">I'll think about it</button></div></div>
-    <div id="q11" class="page"><h2>Question 11</h2><p>Will you be my Valentine? </p><div class="options-grid"><button onclick="checkScore(this, true)">YES!</button><button onclick="checkScore(this, false)">No way</button></div></div>
+    
+    <div id="q11" class="page">
+        <h2>Question 11</h2>
+        <p>Will you be my Valentine?</p>
+        <div class="options-grid">
+            <button onclick="checkScore(this, true)">YES!</button>
+            <button id="no-btn" onmouseover="moveNo()" ontouchstart="moveNo()">No way</button>
+        </div>
+    </div>
 
     <div id="result-page" class="page">
         <h2>Results!</h2>
@@ -185,29 +180,23 @@
             </div>
         </div>
 
-        <div id="music-view" class="music-view">
-            <div style="text-align: center; margin-top: 20px;">
-                <p class="music-text">
-                    Every note of this song reminds me of you. <br>
-                    You are the melody in my heart, Archana. <br>
-                    I could listen to this forever with you. ✨
-                </p>
-                <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
+        <div id="letter-view" class="letter-view">
+            <div class="polaroid">
+                <div class="letter-paper" id="typed-letter"></div>
             </div>
+            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
         </div>
 
-        <div id="letter-view" class="letter-view">
-            <div class="letter-paper" id="typed-letter"></div>
-            <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
+        <div id="music-view" class="music-view">
+            <p class="music-text">Every note of this song reminds me of you. <br>Melody of my heart, Archana. ✨</p>
+            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
         </div>
 
         <div id="password-view" class="password-view">
-            <div style="text-align: center; margin-top: 20px;">
-                <p>The secret gift password is:</p>
-                <h2 class="reveal-pass" onclick="copyPass()" id="pass-code">Archanamadhu@7736</h2>
-                <p style="font-size: 0.7rem; color: #999; margin-top: 10px;">(Tap the code to copy ✨)</p>
-                <div class="center-btn"><div class="back-icon" onclick="backToGifts()">🌸 Back</div></div>
-            </div>
+            <p>Secret Gift Password:</p>
+            <h2 id="pass-code" onclick="copyPass()" style="cursor:pointer; border: 2px dashed #ffafcc; padding: 10px;">Archanamadhu@7736</h2>
+            <p style="font-size: 0.7rem;">(Tap to copy ✨)</p>
+            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
         </div>
     </div>
 </div>
@@ -218,11 +207,11 @@
     let currentStep = 1; let score = 0; let time = 0;
     const music = document.getElementById('bgMusic');
 
+    // Canvas Background
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
     window.addEventListener('resize', resize); resize();
-
     const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#ffffff'];
-    const curveLines = Array.from({length: 30}, () => ({
+    const curveLines = Array.from({length: 20}, () => ({
         yBase: Math.random() * canvas.height, amplitude: Math.random() * 50 + 20,
         frequency: Math.random() * 0.003 + 0.001, speed: Math.random() * 0.01 + 0.005,
         offset: Math.random() * 5000, color: colors[Math.floor(Math.random() * colors.length)],
@@ -244,6 +233,35 @@
     }
     animate();
 
+    // Heart Burst on Click
+    window.addEventListener('click', (e) => {
+        for (let i = 0; i < 6; i++) {
+            const heart = document.createElement('div');
+            heart.className = 'heart-particle';
+            heart.innerHTML = ['❤️', '💖', '✨', '🌸'][Math.floor(Math.random() * 4)];
+            heart.style.left = e.clientX + 'px';
+            heart.style.top = e.clientY + 'px';
+            document.body.appendChild(heart);
+            const angle = Math.random() * Math.PI * 2;
+            const velocity = Math.random() * 100 + 50;
+            heart.animate([
+                { transform: 'translate(0, 0) scale(1)', opacity: 1 },
+                { transform: `translate(${Math.cos(angle) * velocity}px, ${Math.sin(angle) * velocity}px) scale(0)`, opacity: 0 }
+            ], { duration: 800, easing: 'ease-out' }).onfinish = () => heart.remove();
+        }
+    });
+
+    // Escaping No Button
+    function moveNo() {
+        const noBtn = document.getElementById('no-btn');
+        const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+        const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+        noBtn.style.position = 'fixed';
+        noBtn.style.left = x + 'px';
+        noBtn.style.top = y + 'px';
+    }
+
+    // Typing Letter
     const letterText = "My Dearest Archana,\n\nThank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. \n\nAlways yours, \nBibin ❤️";
     function typeLetter() {
         const target = document.getElementById('typed-letter');
@@ -256,13 +274,14 @@
         }, 50);
     }
 
+    // Quiz Logic
     function startQuiz() {
         document.getElementById('instruction-page').classList.remove('active');
         document.getElementById('q1').classList.add('active');
     }
 
     function next(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(35); } 
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; } 
         else { btn.classList.add('shake'); setTimeout(() => btn.classList.remove('shake'), 400); }
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
@@ -272,8 +291,7 @@
     }
 
     function checkScore(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(40); }
-        else { btn.classList.add('shake'); }
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; }
         setTimeout(() => {
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
@@ -287,19 +305,6 @@
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Try Again 🔄"; giftBtn.onclick = () => location.reload();
             }
         }, 600);
-    }
-
-    function createFireworks(count = 10) {
-        for (let i = 0; i < count; i++) {
-            const p = document.createElement('div');
-            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
-            const rect = document.querySelector('.container').getBoundingClientRect();
-            p.style.left = (rect.left + rect.width / 2) + 'px';
-            p.style.top = (rect.top + rect.height / 2) + 'px';
-            document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 500, dY = (Math.random() - 0.5) * 500;
-            p.animate([{ opacity: 1, transform: 'translate(0,0) scale(1)' }, { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0.2)` }], 1200).onfinish = () => p.remove();
-        }
     }
 
     function showGift() {
@@ -316,19 +321,15 @@
 
     function backToGifts() {
         music.pause(); music.currentTime = 0;
-        document.getElementById('letter-view').style.display = 'none';
-        document.getElementById('password-view').style.display = 'none';
-        document.getElementById('music-view').style.display = 'none';
+        document.querySelectorAll('.letter-view, .password-view, .music-view').forEach(v => v.style.display = 'none');
         document.getElementById('gift-selection').style.display = 'block';
     }
 
     function copyPass() {
-        const pass = "Archanamadhu@7736";
-        navigator.clipboard.writeText(pass).then(() => {
+        navigator.clipboard.writeText("Archanamadhu@7736").then(() => {
             const toast = document.getElementById('copy-toast');
             toast.style.opacity = '1';
             setTimeout(() => toast.style.opacity = '0', 2000);
-            createFireworks(20);
         });
     }
 </script>
